--- a/SASS/main/_nav.scss
+++ b/SASS/main/_nav.scss
@@ -107,13 +107,19 @@ nav {
       max-height: 60px;
       overflow: hidden;
 
+      // utilty class to open menu
       &.mobile-mode {
         max-height: 500px;
       }
       ul {
+        display: none;
         flex-direction: column;
         align-items: center;
 
+        // utilty class to open menu
+        &.open-menu {
+          display: flex;
+        }
         li {
           margin: 0.5rem 0;
         }
